# MPC_CPOMDP

./: CMakeLists.txt  FindIPOPT.cmake  InstallDependencies  README.md  bashforIpopt  todolist
MATLAB/: Overtake_case1.m~
MATLAB/DMCBP_CDC19_code/intersection/code/: README  intersection_opp_1_step_1.eps  intersection_opp_1_step_2.eps  intersection_opp_1_step_3.eps  intersection_opp_1_step_4.eps  intersection_opp_1_step_5.eps  intersection_opp_1_step_6.eps  intersection_opp_1_step_7.eps  intersection_opp_1_step_8.eps  intersection_opp_2_step_1.eps  intersection_opp_2_step_2.eps  intersection_opp_2_step_3.eps  intersection_opp_2_step_4.eps  intersection_opp_2_step_5.eps  intersection_opp_2_step_6.eps  intersection_opp_2_step_7.eps  intersection_opp_2_step_8.eps  intersection_opp_2_step_9.eps  main.m  plot_history.m
MATLAB/DMCBP_CDC19_code/intersection/picture/: intersection_opp_1_step_1.eps  intersection_opp_1_step_2.eps  intersection_opp_1_step_3.eps  intersection_opp_1_step_4.eps  intersection_opp_1_step_5.eps  intersection_opp_1_step_6.eps  intersection_opp_1_step_7.eps  intersection_opp_1_step_8.eps  intersection_opp_2_step_1.eps  intersection_opp_2_step_2.eps  intersection_opp_2_step_3.eps  intersection_opp_2_step_4.eps  intersection_opp_2_step_5.eps  intersection_opp_2_step_6.eps  intersection_opp_2_step_7.eps  intersection_opp_2_step_8.eps  intersection_opp_2_step_9.eps
MATLAB/DMCBP_CDC19_code/merge/code/: Pws_v.mat  Px.mat  Py.mat  main.m  workspace.mat
MATLAB/DMCBP_CDC19_code/merge/pictures/: merge_opp_1_step_1.eps  merge_opp_1_step_2.eps  merge_opp_1_step_3.eps  merge_opp_1_step_4.eps  merge_opp_1_step_5.eps  merge_opp_1_step_6.eps  merge_opp_2_step_1.eps  merge_opp_2_step_2.eps  merge_opp_2_step_3.eps  merge_opp_2_step_4.eps  merge_opp_2_step_5.eps  merge_opp_2_step_6.eps
MATLAB/DMCBP_CDC19_code/overtake/code/: CDC19_overtake.POMDP  GenModel.m  GenModel.m~  Pxy.mat  main.m  nmultichoosek.m  overtake_opp_1_step_1.eps  overtake_opp_1_step_2.eps  overtake_opp_1_step_3.eps  overtake_opp_1_step_4.eps  overtake_opp_2_step_1.eps  overtake_opp_2_step_2.eps  overtake_opp_2_step_3.eps  overtake_opp_2_step_4.eps  overtake_opp_2_step_5.eps  overtake_opp_2_step_6.eps  states_history_opp1.mat  states_history_opp2.mat  workspace.mat
MATLAB/DMCBP_CDC19_code/overtake/picture/: overtake_opp_1_step_1.eps  overtake_opp_1_step_2.eps  overtake_opp_1_step_3.eps  overtake_opp_1_step_4.eps  overtake_opp_2_step_1.eps  overtake_opp_2_step_2.eps  overtake_opp_2_step_3.eps  overtake_opp_2_step_4.eps  overtake_opp_2_step_5.eps  overtake_opp_2_step_6.eps
MATLAB/overtake/: GenModel.m  Overtake_case1.m  Pxy.mat  overtake.POMDP
include/: CassandraParser.hpp  Core.hpp  DefTypes.hpp  IO.hpp  Model.hpp  POMDP_NLP.hpp  Probability.hpp  Solver.hpp  SolverIPOPT.hpp  SolverNLOPT.hpp  SparseModel.hpp
include/models/: DenseModel.hpp  Model.hpp  SparseModel.hpp
include/solvers/: POMDP_NLP.hpp  Solver.hpp  SolverIPOPT.hpp  SolverNLOPT.hpp
include/systems/: overtake.hpp
include/utilities/: CassandraParser.hpp  Core.hpp  Probability.hpp  Seeder.hpp  Utils.hpp  parameter_reader.hpp
input/: CDC19_intersection.POMDP  default.cfg  overtake.POMDP
src/: CassandraParser.cpp  IO.cpp  Model.cpp  POMDP_NLP.cpp  Probability.cpp  Seeder.cpp  Solver.cpp  SolverNLOPT.cpp  SparseModel.cpp  parameter_reader.cpp
src/models/: DenseModel.cpp  Model.cpp  SparseModel.cpp
src/utilities/: Probability.cpp  parameter_reader.cpp
tests/: InputTest.cpp  run.cpp  run_force_merge.cpp  run_intersection_CDC.cpp  run_merge_CDC.cpp  run_overtake.cpp  run_overtake_CDC.cpp  run_overtake_CDC_ipopt.cpp  run_overtake_ipopt.cpp
